--- a/build.gradle
+++ b/build.gradle
@@ -15,3 +15,14 @@ dependencies {
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
+
+jar {
+    from {
+        (configurations.runtime).collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    }
+    manifest {
+        attributes("Main-Class": "com.edamam.demo.EdamamApiDemo")
+    }
+}
